--- a/config/config.main.json
+++ b/config/config.main.json
@@ -16,13 +16,13 @@
     "LANGUAGE": "en_US",
     "LOG_LEVEL": 1,
     "MODERATORS": [
-        "100008907121641"
+        "61566120836962"
     ],
     "ABSOLUTES": [
-        "100008907121641"
+        "61566120836962"
     ],
-    "NAME": "Xavia",
-    "PREFIX": "x",
+    "NAME": "Rosa",
+    "PREFIX": "+",
     "timezone": "Asia/Ho_Chi_Minh",
     "REFRESH": "43200000"
 }
