--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,119 @@
-[]
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261563734983734%22%3A%22qJs46mYK%22%2C%2261566354181981%22%3A%22lRiO0Fsh%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2024-09-24T15:24:47.523Z",
+        "lastAccessed": "2024-09-24T15:24:47.523Z"
+    },
+    {
+        "key": "datr",
+        "value": "mea3Zq4SWZ5B8jGD5yJmyvPQ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-24T15:24:47.523Z",
+        "lastAccessed": "2024-09-24T15:24:47.523Z"
+    },
+    {
+        "key": "sb",
+        "value": "mea3ZgMk5rWalClp54f7pJ_Y",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-24T15:24:47.523Z",
+        "lastAccessed": "2024-09-24T15:24:47.523Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-24T15:24:47.523Z",
+        "lastAccessed": "2024-09-24T15:24:47.523Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-24T15:24:47.523Z",
+        "lastAccessed": "2024-09-24T15:24:47.523Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B665x360x2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-24T15:24:47.523Z",
+        "lastAccessed": "2024-09-24T15:24:47.523Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-24T15:24:47.523Z",
+        "lastAccessed": "2024-09-24T15:24:47.523Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x362",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-24T15:24:47.523Z",
+        "lastAccessed": "2024-09-24T15:24:47.523Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61566354181981",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-24T15:24:47.523Z",
+        "lastAccessed": "2024-09-24T15:24:47.523Z"
+    },
+    {
+        "key": "fr",
+        "value": "0QVkkO7KfrgvGTPI8.AWUKbNDgLtMasCi3z_ibO7KyrnE.Bmt-aZ..AAA.0.0.Bm8q0d.AWXt4kStVqM",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-24T15:24:47.523Z",
+        "lastAccessed": "2024-09-24T15:24:47.523Z"
+    },
+    {
+        "key": "xs",
+        "value": "37%3AOFtwW2QupDQCKA%3A2%3A1727180062%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-24T15:24:47.523Z",
+        "lastAccessed": "2024-09-24T15:24:47.523Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2629%3Btimestamp%3A1727191480",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-24T15:24:47.523Z",
+        "lastAccessed": "2024-09-24T15:24:47.523Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100421005%3BT%3A28786524",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-24T15:24:47.523Z",
+        "lastAccessed": "2024-09-24T15:24:47.523Z"
+    }
+]
