--- a/appstate.json
+++ b/appstate.json
@@ -1,128 +1,181 @@
 [
     {
-        "key": "dbln",
-        "value": "%7B%2261563734983734%22%3A%22qJs46mYK%22%2C%2261566354181981%22%3A%22lRiO0Fsh%22%7D",
-        "domain": "facebook.com",
-        "path": "/login/device-based/",
+        "name": "datr",
+        "value": "5yj1ZkMl-uSTTosg0VgE20sr",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-09-24T23:17:19.263Z",
-        "lastAccessed": "2024-09-24T23:17:19.272Z"
-    },
-    {
-        "key": "datr",
-        "value": "mea3Zq4SWZ5B8jGD5yJmyvPQ",
-        "domain": "facebook.com",
         "path": "/",
-        "hostOnly": false,
-        "creation": "2024-09-24T23:17:19.272Z",
-        "lastAccessed": "2024-09-24T23:17:19.272Z"
+        "secure": true,
+        "httpOnly": true,
+        "sameSite": "no_restriction",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1761902822,
+        "storeId": null
     },
     {
-        "key": "sb",
-        "value": "mea3ZgMk5rWalClp54f7pJ_Y",
-        "domain": "facebook.com",
+        "name": "fr",
+        "value": "0F1wcPFeqrOqFdv4z.AWUjA7l19x0B8gFrHovL-Euc5pQ.Bm9Sjn..AAA.0.0.Bm9Sj2.AWXP0E0UXis",
+        "domain": ".facebook.com",
+        "hostOnly": false,
         "path": "/",
-        "hostOnly": false,
-        "creation": "2024-09-24T23:17:19.272Z",
-        "lastAccessed": "2024-09-24T23:17:19.272Z"
+        "secure": true,
+        "httpOnly": true,
+        "sameSite": "no_restriction",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1735118839,
+        "storeId": null
     },
     {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
+        "name": "vpd",
+        "value": "v1%3B664x360x2",
+        "domain": ".facebook.com",
+        "hostOnly": false,
         "path": "/",
-        "hostOnly": false,
-        "creation": "2024-09-24T23:17:19.272Z",
-        "lastAccessed": "2024-09-24T23:17:19.272Z"
+        "secure": true,
+        "httpOnly": false,
+        "sameSite": "lax",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1732526851,
+        "storeId": null
     },
     {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
+        "name": "xs",
+        "value": "30%3AhzJi9HSKbayg0A%3A2%3A1727342839%3A-1%3A-1",
+        "domain": ".facebook.com",
+        "hostOnly": false,
         "path": "/",
-        "hostOnly": false,
-        "creation": "2024-09-24T23:17:19.272Z",
-        "lastAccessed": "2024-09-24T23:17:19.272Z"
+        "secure": true,
+        "httpOnly": true,
+        "sameSite": "no_restriction",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1758878839,
+        "storeId": null
     },
     {
-        "key": "vpd",
-        "value": "v1%3B665x360x2",
-        "domain": "facebook.com",
+        "name": "fbl_st",
+        "value": "101630309%3BT%3A28789047",
+        "domain": ".facebook.com",
+        "hostOnly": false,
         "path": "/",
-        "hostOnly": false,
-        "creation": "2024-09-24T23:17:19.272Z",
-        "lastAccessed": "2024-09-24T23:17:19.272Z"
+        "secure": true,
+        "httpOnly": false,
+        "sameSite": "strict",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1758878851,
+        "storeId": null
     },
     {
-        "key": "locale",
+        "name": "locale",
         "value": "en_US",
-        "domain": "facebook.com",
-        "path": "/",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-09-24T23:17:19.272Z",
-        "lastAccessed": "2024-09-24T23:17:19.272Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": false,
+        "sameSite": "no_restriction",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1727947649,
+        "storeId": null
     },
     {
-        "key": "m_pixel_ratio",
-        "value": "2",
-        "domain": "facebook.com",
-        "path": "/",
+        "name": "m_pixel_ratio",
+        "value": "1",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-09-24T23:17:19.272Z",
-        "lastAccessed": "2024-09-24T23:17:19.272Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": false,
+        "sameSite": "no_restriction",
+        "session": true,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "storeId": null
     },
     {
-        "key": "wd",
-        "value": "360x665",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-09-24T23:17:19.272Z",
-        "lastAccessed": "2024-09-24T23:17:19.272Z"
-    },
-    {
-        "key": "c_user",
+        "name": "c_user",
         "value": "61564011613134",
-        "domain": "facebook.com",
-        "path": "/",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-09-24T23:17:19.272Z",
-        "lastAccessed": "2024-09-24T23:17:19.272Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": false,
+        "sameSite": "no_restriction",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1758878839,
+        "storeId": null
     },
     {
-        "key": "fr",
-        "value": "0QVkkO7KfrgvGTPI8.AWVnNXmwirOnnjhxbR7ft8xaI7U.Bmt-aZ..AAA.0.0.Bm80h2.AWUxPVDS-Zc",
-        "domain": "facebook.com",
-        "path": "/",
+        "name": "m_page_voice",
+        "value": "61564011613134",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-09-24T23:17:19.272Z",
-        "lastAccessed": "2024-09-24T23:17:19.272Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": true,
+        "sameSite": "lax",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1735118845,
+        "storeId": null
     },
     {
-        "key": "xs",
-        "value": "43%3A2QboXsnzT8kgBA%3A2%3A1727219830%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
+        "name": "sb",
+        "value": "5yj1ZsK7nBqggYWT8mfWWppD",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-09-24T23:17:19.272Z",
-        "lastAccessed": "2024-09-24T23:17:19.272Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": true,
+        "sameSite": "no_restriction",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1761902839,
+        "storeId": null
     },
     {
-        "key": "fbl_st",
-        "value": "101620192%3BT%3A28786997",
-        "domain": "facebook.com",
-        "path": "/",
+        "name": "wd",
+        "value": "360x721",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-09-24T23:17:19.272Z",
-        "lastAccessed": "2024-09-24T23:17:19.272Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": false,
+        "sameSite": "lax",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1727947646,
+        "storeId": null
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2630%3Btimestamp%3A1727219832",
-        "domain": "facebook.com",
-        "path": "/",
+        "name": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2630%3Btimestamp%3A1727342850",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-09-24T23:17:19.272Z",
-        "lastAccessed": "2024-09-24T23:17:19.272Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": false,
+        "sameSite": "no_restriction",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1735118850,
+        "storeId": null
     }
 ]
