--- a/config/config.main.json
+++ b/config/config.main.json
@@ -22,7 +22,7 @@
         "61566120836962"
     ],
     "NAME": "Rosa",
-    "PREFIX": "+",
+    "PREFIX": "",
     "timezone": "Asia/Ho_Chi_Minh",
     "REFRESH": "43200000"
 }
